@@ -1,3 +1,9 @@
+2006-03-14  David Reveman  <davidr@novell.com>
+
+	* src/event.c:
+	* src/screen.c:
+	* include/compiz.h: Add bindings for changing window opacity.
+
 2006-03-14  Radek Doulik  <rodo@novell.com>
 
 	* src/event.c (handleEvent): handle minimize/maximize/unmaximize
